@@ -1,3 +1,8 @@
+2003-05-05  Jacob Smullyan  <smulloni@smullyan.org>
+
+	* pylibs/SkunkExcept.py (SkunkSyntaxError.format): stopped
+	building up strings through multiple concatenations.
+
 2003-05-05    <drew@loki.sai-office>
 
 	* SkunkWeb/Services/templating/MailServices.py: big and better update
